fix letter spacing on tablet and desktop

--- a/src/css/our-yachts.css
+++ b/src/css/our-yachts.css
@@ -140,7 +140,6 @@
 @media screen and (min-width: 768px) {
   .section-title {
     width: 645px;
-    letter-spacing: 0.02em;
     font-size: 48px;
     margin: 0 auto 75px;
   }
@@ -183,6 +182,12 @@
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .section-title {
+    letter-spacing: 0.02em;
+  }
+}
+
 @media screen and (min-width: 1280px) {
   .section-title {
     width: 645px;
@@ -211,6 +216,7 @@
   .section-title {
     width: 714px;
     font-size: 48px;
+    letter-spacing: 0.02em;
   }
 
   .yachts-list {
